--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "bugs": {
     "url": "https://github.com/wasim7raja10/Codeforces-tracker/issues"
   },
-  "homepage": "https://github.com/wasim7raja10/Codeforces-tracker#readme",
-  "dependencies": {
-    "axios": "^0.21.4"
-  }
+  "homepage": "https://github.com/wasim7raja10/Codeforces-tracker#readme"
 }
