--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/wasim7raja10/Codeforces-tracker/issues"
   },
-  "homepage": "https://github.com/wasim7raja10/Codeforces-tracker#readme"
+  "homepage": "https://github.com/wasim7raja10/Codeforces-tracker#readme",
+  "dependencies": {
+    "bootstrap-icons": "^1.5.0"
+  }
 }
